fix(dropdown): Fixed spacing between dropdown trigger and menu

--- a/utils/_helpers.scss
+++ b/utils/_helpers.scss
@@ -89,7 +89,7 @@ $debug: false !default;
 }
 
 @mixin clearfix {
-  &::after {
+  &:after {
     clear: both;
     content: "";
     display: block;
